# dgx-vllm-launcher

./: .gitignore  AGENTS.md  README.md  models.json  pyproject.toml
.github/workflows/: ci.yml
dgx_vllm_launcher/: __init__.py  check.py  cli.py  config.py  docker_ops.py  http_ops.py  launcher.py  orchestrator.py  plan.py  presentation.py  secrets.py  variant_aliases.py  vllm_args.py
dgx_vllm_launcher/tuned_configs/nemotron3_nano_omni/: headdim=64,dstate=128,device_name=NVIDIA_GB10,cache_dtype=float32.json
dgx_vllm_launcher/tuned_configs/qwen36_fp8/: E=256,N=512,device_name=NVIDIA_GB10,dtype=fp8_w8a8,block_shape=[128,128].json
qwen_vllm_launcher/: __main__.py  check.py  cli.py  config.py  docker_ops.py  orchestrator.py
tests/: conftest.py  test_aliases.py  test_check.py  test_cli.py  test_config.py  test_docker_ops.py  test_e2e.py  test_http_ops.py  test_orchestrator.py  test_presentation.py  test_secrets.py
